Add the new secret page that needs to be password protected.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">passwordprotected</string>
+    <string name="secret_message">This is the recipe for Kentucky Fried Chicken&#174;!</string>
 </resources>
